force-app/main/default/objects/XFILES__xFiles_custom_setting__c/XFILES__xFiles_custom_setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>xFiles Pro Common Setting</description>
    <label>xFiles Common Setting</label>
</CustomObject>