force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Admin_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Admin_Mail_Address__c</fullName>
    <description>To send a mail to Admin for Email Service Feature.</description>
    <inlineHelpText>To send a mail to Admin for Email Service Feature.</inlineHelpText>
    <label>Admin Mail Address</label>
    <type>Email</type>
</CustomField>