force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Allow_Notes__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Allow_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Notes</label>
    <type>Checkbox</type>
</CustomField>