force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Allowed_Content_Size__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Allowed_Content_Size__c</fullName>
    <defaultValue>1024</defaultValue>
    <description>Allowed Content Size (in MBs)</description>
    <inlineHelpText>Allowed Content Size (in MBs)</inlineHelpText>
    <label>Allowed File Size (in MBs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>