force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Allowed_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Allowed_Content_Type__c</fullName>
    <description>Allowed Content Type</description>
    <inlineHelpText>Allowed Content Type (separated by comma) Ex: pdf, image, doc, xls, ppt</inlineHelpText>
    <label>Allowed File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>