force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Amazon_Accelerator__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Amazon_Accelerator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to enable Amazon Accelerator</description>
    <label>Amazon Accelerator</label>
    <type>Checkbox</type>
</CustomField>