force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Amazon_S3_IAM__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Amazon_S3_IAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>whether organization using IAM</description>
    <label>Amazon S3 IAM</label>
    <type>Checkbox</type>
</CustomField>