force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Attachment__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Attachment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Attachment</description>
    <inlineHelpText>Attachment</inlineHelpText>
    <label>Attachment</label>
    <type>Checkbox</type>
</CustomField>