force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__AutoSync__c.field-meta.xml
<CustomField>
    <fullName>XFILES__AutoSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Using this user can share file URL via Email with others who are not using Salesforce.</description>
    <inlineHelpText>Using this user can share file URL via Email with others who are not using Salesforce.</inlineHelpText>
    <label>Enable Public Link</label>
    <type>Checkbox</type>
</CustomField>