force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_add_tags_and_rename__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_add_tags_and_rename__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Auditing Activity</label>
    <type>Checkbox</type>
</CustomField>