force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Add_version__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Add_version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to create the Files instead of Attachments</description>
    <inlineHelpText>This field is used to create the Files instead of Attachments</inlineHelpText>
    <label>Use File Content Storage</label>
    <type>Checkbox</type>
</CustomField>