force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Configure__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Configure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Implementing record level trash folder in google drive.</description>
    <inlineHelpText>Implementing record level trash folder in google drive.</inlineHelpText>
    <label>Enable Trash</label>
    <type>Checkbox</type>
</CustomField>