force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Download__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Download</label>
    <type>Checkbox</type>
</CustomField>