force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Drag_and_Drop__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Drag_and_Drop__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This helps user to enable/disable map folder option in GDrive Component.</description>
    <inlineHelpText>This helps user to enable/disable map folder option in GDrive Component.</inlineHelpText>
    <label>Enable Map Folder</label>
    <type>Checkbox</type>
</CustomField>