force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Edit_Data__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Edit_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user has permission to edit Content, Attachment, and Document (V-2.4). This field is used for XfileAttach Component to edit files created in GDrive.</description>
    <inlineHelpText>The user has permission to edit Content, Attachment, and Document (V-2.4). This field is used for XfileAttach Component to edit files created in GDrive.(V-3.5)</inlineHelpText>
    <label>Can Edit Data</label>
    <type>Checkbox</type>
</CustomField>