force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Inline_Upload__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Inline_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will allow user to inline upload in light weight component</description>
    <label>Enable EmailService Error Log</label>
    <type>Checkbox</type>
</CustomField>