force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Link_Upload__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Link_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can Link Upload</description>
    <inlineHelpText>Can Link Upload</inlineHelpText>
    <label>Can Link Upload</label>
    <type>Checkbox</type>
</CustomField>