force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Manage__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Manage__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Can manage the content, Document, Attachment, Link, FeedFile</description>
    <inlineHelpText>Can manage the content, Document, Attachment, Link</inlineHelpText>
    <label>Can Manage</label>
    <type>Checkbox</type>
</CustomField>