force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Setup__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Setup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User having permission to setup cloud storage provider</description>
    <inlineHelpText>User having permission to setup cloud storage provider</inlineHelpText>
    <label>Can Setup</label>
    <type>Checkbox</type>
</CustomField>