force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Share__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for sharing files to the site user.</description>
    <inlineHelpText>This field is used for sharing files to the site user.</inlineHelpText>
    <label>Can Share</label>
    <type>Checkbox</type>
</CustomField>