force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_Upload__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_Upload__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User have permission to upload a file into external storage.</description>
    <inlineHelpText>User have permission to upload a file into external storage.</inlineHelpText>
    <label>Can Upload</label>
    <type>Checkbox</type>
</CustomField>