force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_View_Data__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_View_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User have permission to view the Content, Attachment, Document link</description>
    <inlineHelpText>User have permission to view the Content, Attachment, Document link</inlineHelpText>
    <label>Can View Data</label>
    <type>Checkbox</type>
</CustomField>