force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Can_view_properties__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Can_view_properties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OneDrive for business</label>
    <type>Checkbox</type>
</CustomField>