force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Choose_provider_while_upload__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Choose_provider_while_upload__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Choose provider while upload</description>
    <inlineHelpText>Choose provider while upload</inlineHelpText>
    <label>Choose provider while upload</label>
    <type>Checkbox</type>
</CustomField>