force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Configure_folder_structure__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Configure_folder_structure__c</fullName>
    <description>The secret key used for encrypting gateway credentials.</description>
    <inlineHelpText>The secret key used for encrypting gateway credentials.</inlineHelpText>
    <label>Gateway Secret Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>