force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Configure_folder_while_upload__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Configure_folder_while_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for creating custom folders and uploading files inside those folders.</description>
    <inlineHelpText>This field is used for creating custom folders and uploading files inside those folders.</inlineHelpText>
    <label>Enable Custom Folder Setup</label>
    <type>Checkbox</type>
</CustomField>