force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Content__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Content</description>
    <inlineHelpText>Content</inlineHelpText>
    <label>Content</label>
    <type>Checkbox</type>
</CustomField>