force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Content_Type__c</fullName>
    <label>Content Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>