force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Default_Bucket_Settings_S3__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Default_Bucket_Settings_S3__c</fullName>
    <description>Default Bucket settings for amazon s3</description>
    <inlineHelpText>Default Bucket settings for amazon s3</inlineHelpText>
    <label>Default Bucket Settings(S3)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>