force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Default_Upload_Storage_Provider__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Default_Upload_Storage_Provider__c</fullName>
    <description>Default Upload Storage Provider</description>
    <inlineHelpText>Default Upload Storage Provider (S3 / Dropbox)</inlineHelpText>
    <label>Default Upload Storage Provider</label>
    <length>200</length>
    <type>Text</type>
</CustomField>