force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Delete_Permission_on_Remote__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Delete_Permission_on_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete Permission on Remote</description>
    <inlineHelpText>Delete Permission on Remote</inlineHelpText>
    <label>Delete Permission on Remote</label>
    <type>Checkbox</type>
</CustomField>