force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Document__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Document__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Document</label>
    <type>Checkbox</type>
</CustomField>