force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Email_Attachment_Size_in_MBs__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Email_Attachment_Size_in_MBs__c</fullName>
    <defaultValue>10485760</defaultValue>
    <label>Email Attachment Size((in Bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>