force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Enable_Export__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Enable_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable export feature</description>
    <label>Enable Export</label>
    <type>Checkbox</type>
</CustomField>