force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Enable_Import__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Enable_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to enable Import feature in xfiles</description>
    <label>Enable Import</label>
    <type>Checkbox</type>
</CustomField>