force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Enable_Right_Click_Menu__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Enable_Right_Click_Menu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Right Click Menu</description>
    <inlineHelpText>Enable Right Click Menu</inlineHelpText>
    <label>Enable Right Click Menu</label>
    <type>Checkbox</type>
</CustomField>