force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Enable_Search__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Enable_Search__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Template feature through button.</description>
    <inlineHelpText>Template feature through button.</inlineHelpText>
    <label>Template Button</label>
    <type>Checkbox</type>
</CustomField>