force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Feed_File__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Feed_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feed File</label>
    <type>Checkbox</type>
</CustomField>