force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__File_Download_On_View__c.field-meta.xml
<CustomField>
    <fullName>XFILES__File_Download_On_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow file to download and block preview.</description>
    <label>File Download On View</label>
    <type>Checkbox</type>
</CustomField>