force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__File_Version_Settings__c.field-meta.xml
<CustomField>
    <fullName>XFILES__File_Version_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It allow you to keep versions of a file.</description>
    <inlineHelpText>It allow you to keep versions of a file.</inlineHelpText>
    <label>File Version Settings</label>
    <type>Checkbox</type>
</CustomField>