force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Gateway_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Gateway_URL__c</fullName>
    <label>Gateway URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>