force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Lambda_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Lambda_URL__c</fullName>
    <description>Helps to push files more than 8Mb to Amazon S3 storage using Lambda service.</description>
    <inlineHelpText>Helps to push files more than 8Mb to Amazon S3 storage using Lambda service.</inlineHelpText>
    <label>Lambda URL</label>
    <type>TextArea</type>
</CustomField>