force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Log_Error_Related_Info__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Log_Error_Related_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Log Error Related Info</description>
    <label>Log Error Related Info</label>
    <type>Checkbox</type>
</CustomField>