force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Log_UI_Error__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Log_UI_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Log UI Error</description>
    <label>Date Format</label>
    <type>Checkbox</type>
</CustomField>