force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Manage_Columns__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Manage_Columns__c</fullName>
    <defaultValue>&quot;XFILES&quot;</defaultValue>
    <description>This field is used for saving Xfiles Pro NamespacePrefix.</description>
    <inlineHelpText>This field is used for saving Xfiles Pro NamespacePrefix.</inlineHelpText>
    <label>Xfiles Pro</label>
    <type>TextArea</type>
</CustomField>