force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__No_of_Files__c.field-meta.xml
<CustomField>
    <fullName>XFILES__No_of_Files__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Number of file user can upload</description>
    <inlineHelpText>Number of file user can upload</inlineHelpText>
    <label>Max No of Files/Upload</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>