force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__No_of_Files_per_page__c.field-meta.xml
<CustomField>
    <fullName>XFILES__No_of_Files_per_page__c</fullName>
    <description>No of Files per page</description>
    <inlineHelpText>No of Files per page</inlineHelpText>
    <label>No of Files per page</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>