force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Override_Attach_File__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Override_Attach_File__c</fullName>
    <description>Override Attach File like full or partial</description>
    <inlineHelpText>Override Attach File like full or partial</inlineHelpText>
    <label>Import Batch Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>