force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Provide_Description__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Provide_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provide Description</description>
    <inlineHelpText>Provide Description</inlineHelpText>
    <label>Provide Description</label>
    <type>Checkbox</type>
</CustomField>