force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Public_Access_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Public_Access_URL__c</fullName>
    <description>Public  URL to access links. Could be a salesforce site or internal/external site URL.</description>
    <inlineHelpText>Public  URL to access links. 
		Ex: Salesforce public site URL</inlineHelpText>
    <label>Site URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>