force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Send_Email_Error_Notification__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Send_Email_Error_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Email Error Notification</description>
    <label>Send Email Error Notification</label>
    <type>Checkbox</type>
</CustomField>