force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Set_Error_Email__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Set_Error_Email__c</fullName>
    <description>This field is used to send error email.</description>
    <label>Set Error Email</label>
    <type>Email</type>
</CustomField>