force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Set_Error_Template__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Set_Error_Template__c</fullName>
    <label>Community Builder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>