force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Set_Tags__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Set_Tags__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for dynamic bucket</description>
    <inlineHelpText>This field is used for dynamic bucket</inlineHelpText>
    <label>Cross Bucket</label>
    <type>Checkbox</type>
</CustomField>