force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Show_Delete__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Show_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Delete</description>
    <label>Show Delete</label>
    <type>Checkbox</type>
</CustomField>