force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Show_Download__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Show_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Download</description>
    <label>Show Download</label>
    <type>Checkbox</type>
</CustomField>