force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Show_Preview__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Show_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Preview</description>
    <label>Show Preview</label>
    <type>Checkbox</type>
</CustomField>