force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Show_Properties__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Show_Properties__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Properties</description>
    <label>Show Properties</label>
    <type>Checkbox</type>
</CustomField>