force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Show_Salesforce_Time__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Show_Salesforce_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to disable splash in application.</description>
    <label>Disable Splash</label>
    <type>Checkbox</type>
</CustomField>