force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Show_Share__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Show_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share for Google Drive Component</description>
    <label>Show Share</label>
    <type>Checkbox</type>
</CustomField>