force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Show_Version__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Show_Version__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to enable/disable Amazon-V4.</description>
    <inlineHelpText>This field is used to enable/disable Amazon-V4.</inlineHelpText>
    <label>Enable Amazon-V4</label>
    <type>Checkbox</type>
</CustomField>