force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Use_Google_Viewer__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Use_Google_Viewer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field enables to Google doc viewer in content viewer page.</description>
    <label>Use Google Viewer</label>
    <type>Checkbox</type>
</CustomField>