force-app/main/default/objects/XFILES__xFiles_custom_setting__c/fields/XFILES__Version_Override__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Version_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>this will help create new version of a file</inlineHelpText>
    <label>Version Override</label>
    <type>Checkbox</type>
</CustomField>